// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvbExpansionPanel should create 1`] = `
Array [
  Object {
    "$attrs$": Object {
      "class": "title left",
      "onClick": [Function],
    },
    "$children$": null,
    "$elm$": null,
    "$flags$": 0,
    "$key$": null,
    "$name$": null,
    "$tag$": "div",
    "$text$": null,
  },
  "",
]
`;

exports[`EvbExpansionPanel should render text 1`] = `
Array [
  Object {
    "$attrs$": Object {
      "class": "title left",
      "onClick": [Function],
    },
    "$children$": Array [
      Object {
        "$attrs$": null,
        "$children$": null,
        "$elm$": null,
        "$flags$": 0,
        "$key$": null,
        "$name$": null,
        "$tag$": null,
        "$text$": "Hello world",
      },
    ],
    "$elm$": null,
    "$flags$": 0,
    "$key$": null,
    "$name$": null,
    "$tag$": "div",
    "$text$": null,
  },
  Object {
    "$attrs$": Object {
      "class": "body",
    },
    "$children$": Array [
      Object {
        "$attrs$": null,
        "$children$": null,
        "$elm$": null,
        "$flags$": 0,
        "$key$": null,
        "$name$": null,
        "$tag$": "slot",
        "$text$": null,
      },
    ],
    "$elm$": null,
    "$flags$": 0,
    "$key$": null,
    "$name$": null,
    "$tag$": "div",
    "$text$": null,
  },
]
`;
